# phd_proj

./: README  armadillio_instruction.txt  push_source.sh  sync_source.sh
CarNumerics/: CMakeLists.txt  CMakePresets.json  Solver.cpp  Solver.cpp_20201216.cpp  Solver.hpp  Untitled.ipynb  analysis.ipynb  analysis_for_paper.ipynb  main.cpp
CarNumerics/.ipynb_checkpoints/: analysis-checkpoint.ipynb
CarNumerics/bak/: Solver.cpp_bak
